# fep_system

./: CMakeLists.txt  FEP_PRIVATE_COMPAT.cmake  README.md
doc/: CMakeLists.txt  run_doxygen.cmake.in
doc/input/: fep_main.dox  fep_system_library.dox
examples/: CMakeLists.txt  conanfile.txt
examples/src/: CMakeLists.txt
examples/src/demo_fep_system_control/: CMakeLists.txt  README.txt  main.cpp
include/fep_system/: fep_system.h  fep_system_export.h  fep_system_types.h  fep_system_version.h.in  participant_proxy.h  rpc_component_proxy.h  system_logger_intf.h
include/fep_system/rpc_components/configuration/: configuration_rpc_intf.h
include/fep_system/rpc_components/data_registry/: data_registry_rpc_intf.h
include/fep_system/rpc_components/legacy/state_machine/: state_machine_rpc_intf.h
include/fep_system/rpc_components/participant_info/: participant_info_rpc_intf.h
scripts/: doxygen.cfg
scripts/cmake/: ndds.cmake  zyre.cmake
src/: CMakeLists.txt
src/fep_system/: CMakeLists.txt  connection_interface.h  fep_system-config.cmake.in  fep_system-macros.cmake  fep_system.cpp  participant_proxy.cpp  private_participant_proxy.h  system_logger.h
src/fep_system/rpc_components/: configuration_proxy.h  data_registry_proxy.h  participant_info_proxy.h  state_machine_proxy.h
test/: CMakeLists.txt  FEP_TEST_PRIVATE.cmake
test/function/: CMakeLists.txt
test/function/system/: CMakeLists.txt
test/function/system/fep_system/: CMakeLists.txt
test/function/system/fep_system/tester_system/src/: CMakeLists.txt  fep_test_common.h  participant.cpp  participant_configuration.cpp  participant_configuration_helper.hpp  participant_configuration_old.cpp  system.cpp  system_discovery.cpp
test/private/: CMakeLists.txt
test/private/install_complete/: reference.yaml
